# DataStructure

./: 10950.c  CMakeLists.txt  dynamic.c  dynamicalloc.c  getNum.c  minmax.c  test.c  twodimension.c
2ndWeek/: 2576.c  search.c
3rdWeek/: 1158.c  2164.c  queue.c  stack.c
